# selvedge

./: LICENSE  main.py  pyproject.toml
widgets/: battery.py  window_title.py  workspaces.py
