[project]
name = "selvedge"
version = "0.1.0"
description = "A flexible status bar configuration designed to frame your desktop cleanly. Powered by Fabric."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"fabric",
]

[tool.uv.sources]
fabric = { git = "https://github.com/Fabric-Development/fabric.git" }

